Backend endpoints for the wiki #540