@@ -2,11 +2,11 @@ package com.kevinguanchedarias.owgejava.dto;
 
 import com.kevinguanchedarias.owgejava.dto.base.DtoWithMissionLimitation;
 import com.kevinguanchedarias.owgejava.entity.SpeedImpactGroup;
+import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.Setter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author Kevin Guanche Darias <kevin@kevinguanchedarias.com>
@@ -14,8 +14,11 @@ import java.util.stream.Collectors;
  */
 @Getter
 @Setter
+@EqualsAndHashCode(onlyExplicitlyIncluded = true, callSuper = false)
 public class SpeedImpactGroupDto extends DtoWithMissionLimitation<SpeedImpactGroup> implements DtoFromEntity<SpeedImpactGroup> {
+    @EqualsAndHashCode.Include
     private Integer id;
+
     private String name;
     private Boolean isFixed = false;
     private Double missionExplore = 0D;
@@ -32,21 +35,17 @@ public class SpeedImpactGroupDto extends DtoWithMissionLimitation<SpeedImpactGro
     public void dtoFromEntity(SpeedImpactGroup entity) {
         initBaseData(entity);
         defineMissionLimitation(entity);
-        id = entity.getId();
+        loadImage(entity);
         if (entity.getRequirementGroups() != null) {
             requirementsGroups = entity.getRequirementGroups().stream().map(current -> {
                 var dto = new RequirementGroupDto();
                 dto.dtoFromEntity(current);
                 return dto;
-            }).collect(Collectors.toList());
-        }
-        if (entity.getImage() != null) {
-            image = entity.getImage().getId();
-            imageUrl = entity.getImage().getUrl();
+            }).toList();
         }
     }
 
-    private void initBaseData(SpeedImpactGroup entity) {
+    protected void initBaseData(SpeedImpactGroup entity) {
         id = entity.getId();
         name = entity.getName();
         isFixed = entity.getIsFixed();
@@ -56,5 +55,12 @@ public class SpeedImpactGroupDto extends DtoWithMissionLimitation<SpeedImpactGro
         missionAttack = entity.getMissionAttack();
         missionConquest = entity.getMissionConquest();
         missionCounterattack = entity.getMissionCounterattack();
+    }
+
+    protected void loadImage(SpeedImpactGroup entity) {
+        if (entity.getImage() != null) {
+            image = entity.getImage().getId();
+            imageUrl = entity.getImage().getUrl();
+        }
     }
 }
